# T2Dot

./: LICENSE  README.md  T2Dot.cabal
src/: ArgParser.hs  Main.hs  T2Parser.hs
