name:                T2Dot
version:             0.1.0.0
synopsis:            convert T2-transition-systems (*.t2) to DOT-Files
-- description:
license:             BSD3
license-file:        LICENSE
author:              Oliver Westphal
maintainer:          o_westphal at online dot de
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable t2dot
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10,
                       process,
                       text,
                       parsec,
                       optparse-applicative,
                       mtl,
                       language-dot
  hs-source-dirs:      src
  default-language:    Haskell2010
